--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,14 @@ body::-webkit-scrollbar {
     border: rgb(255 255 255 / .4) 3px solid;
     outline: none;
     cursor: pointer;
+    transition: all .2s ease;
+}
+
+.button-call:hover {
+    border: transparent 3px solid;
+    color: #111111;
+    background-color: #ffc107;
+    box-shadow: var(--accent-shadow);
 }
 
 .layer-4, .layer-5 {
@@ -108,7 +116,7 @@ body::-webkit-scrollbar {
 
 .pricelist {
     display: flex;
-    padding: calc(var(--index) * 8) 0;
+    padding: calc(var(--index) * 8) 0 0 0;
 }
 
 .pricelist > * {
@@ -151,4 +159,52 @@ body::-webkit-scrollbar {
 
 .text-block__p {
     line-height: calc(var(--index) * 1.3);
+}
+
+.feedback {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: calc(var(--index)* 54);
+    border: 1px solid;
+    height: 100vh;
+}
+
+.feedback-h {
+    text-align: center;
+}
+
+.feedback-h__accent {
+    text-shadow: var(--accent-shadow)
+}
+
+.feedback-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: calc(var(--index));
+    margin-top: calc(var(--pricelist-gap)/2);
+}
+
+.feedback-form > * {
+    border: none;
+    outline: none;
+    width: calc(var(--index)* 21);
+}
+
+.feedback-form > input, .feedback-form > textarea {
+    padding: 1rem;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+}
+
+.feedback-form > input, .feedback-form > button {
+    height: 5vh;
+}
+
+.feedback-form > .feedback-form > textarea {
+    resize: none;
+    height: 15vh;
 }
