--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,50 @@ body::-webkit-scrollbar {
     text-align: center;
 }
 
+.reviews-container {
+    display: flex;
+    margin-top: calc(var(--pricelist-gap) / 2);
+    column-gap: 1rem;
+    position: relative;
+    padding: calc(var(--pricelist-gap) / 4);
+}
+
+.reviews-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 250px;
+  border-top: 1px solid;
+  border-left: 1px solid;
+}
+
+.reviews-container::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 250px;
+    height: 250px;
+    border-bottom: 1px solid;
+    border-right: 1px solid;
+  }
+
+.reviews-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 2rem;
+}
+
 .reviews-card__i {
     width: 100px;
+}
+
+.reviews-card__content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
 }
