--- a/css/main.css
+++ b/css/main.css
@@ -368,13 +368,68 @@ body::-webkit-scrollbar {
     text-align: center;
 }
 
+.footer-h__accent {
+    text-shadow: var(--accent-shadow);
+}
+
 .footer-left, .footer-right {
     width: 50%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+
+.footer-left > *, .footer-right > * {
+    max-width: 80%;
 }
 
 .footer-left {
     background-color: #fff;
+    color: #111111;
+}
+
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: calc(var(--index));
+    margin-top: calc(var(--pricelist-gap) / 4);
+}
+
+.footer-form > * {
+    border: none;
+    outline: none;
+    width: calc(var(--index)* 21);
+}
+
+.footer-form > input, .footer-form > button {
+    height: 5vh;
+}
+
+.footer-form > input, .footer-form > textarea {
+    padding: 1rem;
+    background-color: transparent;
+    border: 1px solid #111111;
+    color: #111111;
+}
+
+.footer-form > textarea {
+    resize: none;
+    height: 15vh;
+}
+
+.footer-form > button {
+    background-color: #111111;
+    color: #fff;
+    transition: all .2s ease;
+    cursor: pointer;
+}
+
+.footer-form > button:hover {
+    box-shadow: var(--accent-shadow);
+    background-color: #ffc107;
     color: #111111;
 }
 
