--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
 
 :root {
     --index: calc(1vw + 1vh);
+    --font-color: #fff;
+    --backface-color: #111111;
     --transition: 1.5s cubic-bezier(.05, .5, 0, 1);
     --text-shadow: 2px 2px 1px black;
     --accent-shadow: 1px 1px 2px rgb(126, 126, 126), 0 0 25px orange, 0 0 5px darkorange;
