--- a/css/main.css
+++ b/css/main.css
@@ -293,18 +293,25 @@ body::-webkit-scrollbar {
     margin-top: calc(var(--pricelist-gap) / 2);
     width: 100%;
     border: 1px solid;
-    overflow-x: scroll;
+    overflow: hidden;
+    display: flex;
 }
 
+.samples-track {
+    display: flex;
+}   
+
 .samples-card {
-    padding: 5%;
+    padding: 1%;
     position: relative;
+    width: 750px;
 }
 
 .samples-card__i {
     object-fit: cover;
-    width: 100%;
     height: 100%;
+    padding: 1%;
+    width: 100%;
 }
 
 .reviews {
