--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,11 @@ body {
 }
 
 p {
-    font-size: var(--index);
+    font-size: calc(var(--index)/1.3);
+}
+
+h2 {
+    font-size: calc(var(--index) * 1.3);
 }
 
 body::-webkit-scrollbar {
@@ -161,7 +165,6 @@ body::-webkit-scrollbar {
 }
 
 .text-block__h {
-    font-size: calc(var(--index) * 1.5);
     margin-bottom: calc(var(--index) * 2);
 }
 
@@ -171,7 +174,6 @@ body::-webkit-scrollbar {
 }
 
 .text-block__p {
-    font-size: var(--index);
     line-height: calc(var(--index) * 1.3);
 }
 
