--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-.hero, .hero__container {
+.hero, .hero__container, .samples {
     will-change: transform;
 }
 
@@ -207,6 +207,7 @@ body::-webkit-scrollbar {
     border: none;
     outline: none;
     width: calc(var(--index)* 21);
+    font-size: calc(var(--index) / 1.5);
 }
 
 .feedback-form > input, .feedback-form > textarea {
@@ -286,7 +287,7 @@ body::-webkit-scrollbar {
 
 .faq-step__number {
     display: block;
-    font-size: 80px;
+    font-size: calc(var(--index) * 4);
     transition: all 2s ease;
 }
 
@@ -318,7 +319,7 @@ body::-webkit-scrollbar {
 .samples-card {
     padding: 1%;
     position: relative;
-    width: 750px;
+    width: 50vw;
 }
 
 .samples-card__i {
@@ -354,8 +355,8 @@ body::-webkit-scrollbar {
   position: absolute;
   top: 0;
   left: 0;
-  width: 250px;
-  height: 250px;
+  width: calc(var(--index) * 10);
+  height: calc(var(--index) * 10);
   border-top: 1px solid;
   border-left: 1px solid;
 }
@@ -365,8 +366,8 @@ body::-webkit-scrollbar {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 250px;
-    height: 250px;
+    width: calc(var(--index) * 10);
+    height: calc(var(--index)* 10);
     border-bottom: 1px solid;
     border-right: 1px solid;
   }
@@ -383,13 +384,21 @@ body::-webkit-scrollbar {
 }
 
 .reviews-card__i {
-    width: 100px;
+    width: calc(var(--index) * 5);
 }
 
 .reviews-card__content {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
+}
+
+.reviews-card__person {
+    font-size: calc(var(--index));
+}
+
+.reviews-card__task {
+    font-size: calc(var(--index) / 1.3);
 }
 
 .footer {
@@ -439,6 +448,7 @@ body::-webkit-scrollbar {
     border: none;
     outline: none;
     width: calc(var(--index)* 21);
+    font-size: calc(var(--index) / 1.5);
 }
 
 .footer-form > input, .footer-form > button {
@@ -473,4 +483,6 @@ body::-webkit-scrollbar {
 .footer-right {
     border-top: 1px solid;
     row-gap: 2rem;
+    font-size: calc(var(--index));
+
 }
