--- a/css/main.css
+++ b/css/main.css
@@ -25,16 +25,17 @@ body {
     font-family: "Ubuntu-regular";
 }
 
+main {
+    max-width: 90vw;
+    margin: 0 auto;
+}
+
 p {
     font-size: calc(var(--index) / 1.3);
 }
 
 h2 {
     font-size: calc(var(--index) * 1.3);
-}
-
-body::-webkit-scrollbar {
-    display: none;
 }
 
 .content {
@@ -133,8 +134,6 @@ body::-webkit-scrollbar {
     display: grid;
     grid-template-columns: 45vw 45vw;
     padding: calc(var(--index) * 8) 0 0 0;
-    max-width: 90vw;
-    margin: 0 auto;
 }
 
 .pricelist > * {
@@ -154,12 +153,14 @@ body::-webkit-scrollbar {
 img.pricelist__item:nth-child(odd) {
     border-top: 1px solid;
     border-left: 1px solid;
+    
 }
 
 img.pricelist__item:nth-child(even) {
     border-bottom: 1px solid;
     border-right: 1px solid;
     align-self: end;
+    justify-self: end;
 }
 
 
@@ -184,7 +185,6 @@ img.pricelist__item:nth-child(even) {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 auto;
     width: 100vw;
     height: 100vh;
 }
@@ -196,7 +196,6 @@ img.pricelist__item:nth-child(even) {
     flex-direction: column;
     justify-content: center;
     width: 90vw;
-    margin: 0 auto;
 }
 
 .feedback-h {
@@ -261,8 +260,6 @@ img.pricelist__item:nth-child(even) {
     height: 100vh;
     flex-direction: column;
     justify-content: center;
-    max-width: calc(var(--index)* 54);
-    margin: 0 auto;
 }
 
 .faq-h {
@@ -313,8 +310,6 @@ img.pricelist__item:nth-child(even) {
 
 .samples {
     height: 100vh;
-    max-width: calc(var(--index)* 54);
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly
@@ -326,7 +321,6 @@ img.pricelist__item:nth-child(even) {
 
 .samples-container {
     height: 80vh;
-    width: 100%;
     border: 1px solid;
     overflow: hidden;
     display: flex;
@@ -351,7 +345,6 @@ img.pricelist__item:nth-child(even) {
 
 .reviews {
     height: 100vh;
-    max-width: calc(var(--index)* 54);
     margin: calc(var(--pricelist-gap) / 2) auto;
     display: flex;
     flex-direction: column;
@@ -423,7 +416,6 @@ img.pricelist__item:nth-child(even) {
 
 .footer {
     height: 100vh;
-    margin: 0 auto;
     display: flex;
     align-items: center;
 }
@@ -517,7 +509,7 @@ img.pricelist__item:nth-child(even) {
         font-size: calc(var(--index) * 1.5);
     }
 
-    p, input {
+    p, input, textarea {
         font-size: calc(var(--index) * 1.2);
     }
 
@@ -552,17 +544,12 @@ img.pricelist__item:nth-child(even) {
         font-size: calc(var(--index) * 1.5);
     }
 
-    .feedback-form > textarea {
-        font-size: calc(var(--index) * 1.4);
-    }
-
     .faq__container {
         flex-direction: column;
     }
     
     .faq-step {
         width: 90vw;
-        margin: 0 auto;
     }
 
     .faq-step:nth-child(1) {
@@ -592,7 +579,6 @@ img.pricelist__item:nth-child(even) {
      }
 
      .reviews {
-        max-width: 90vw;
         height: auto;
      }
 
@@ -607,10 +593,6 @@ img.pricelist__item:nth-child(even) {
 
      .reviews-card__task {
         font-size: calc(var(--index) * 1.3);
-     }
-
-     .footer-form > textarea {
-        font-size: calc(var(--index)* 1.4);
      }
 
      .footer-right > * {
